tester/testsuite/good/intarith.yal
fn  main() -> int {
let x: int = 5;

    while (x > 0) {
        printInt(x);
        x--;
    }

    printInt(x);
    
    return 0;
}
    
