tester/testsuite/bad/array05.yal


fn main() -> int {
  for(boolean i : new int[20]) {
let x: boolean = i;
    boolean x = i;
  }
  return 0;
}
